--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "razorpay": "^2.9.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
